[gd_scene load_steps=17 format=3 uid="uid://bvvbpdio45xnj"]

[ext_resource type="PackedScene" uid="uid://dcmf7xuptleyw" path="res://scenes/Terrain.tscn" id="1_kqs1s"]
[ext_resource type="PackedScene" uid="uid://b3jdkp4vsbhya" path="res://scenes/BuildUI.tscn" id="2_32lhk"]
[ext_resource type="Script" uid="uid://771gw0ni4g8d" path="res://scripts/exterior/Buildmode.gd" id="2_d1c63"]
[ext_resource type="PackedScene" uid="uid://bcye1bqvvlut0" path="res://scenes/BMExtractor.tscn" id="2_pdh0q"]
[ext_resource type="PackedScene" uid="uid://dpaynrvl2p2ya" path="res://scenes/Building.tscn" id="3_0uv0p"]
[ext_resource type="Script" uid="uid://b6u5rh15bjuef" path="res://scripts/world/CameraController.gd" id="3_7g83o"]
[ext_resource type="PackedScene" uid="uid://c6usyf1y38r6y" path="res://scenes/Inside_Build.tscn" id="4_b3faq"]
[ext_resource type="PackedScene" uid="uid://cyr31nhtawkjb" path="res://scenes/ConstructionSite.tscn" id="6_0uv0p"]
[ext_resource type="PackedScene" uid="uid://cnpc02nuxn6t1" path="res://scenes/ResourceNode_Regolith.tscn" id="6_ygioq"]
[ext_resource type="PackedScene" uid="uid://derui073uh73x" path="res://scenes/TopBarUI.tscn" id="8_b3faq"]
[ext_resource type="Script" uid="uid://deybm75ytbk03" path="res://scripts/rooms/RoomMode.gd" id="8_rpuxp"]
[ext_resource type="PackedScene" uid="uid://b2j0pq4mepth" path="res://scenes/RightPanelUI.tscn" id="11_7c4bj"]
[ext_resource type="Script" uid="uid://b1b7n0dcc63je" path="res://scripts/ui/RightPanelUI.gd" id="12_nrtoj"]
[ext_resource type="PackedScene" uid="uid://dityrw4q4sdnn" path="res://scenes/CrewHudPanel.tscn" id="13_i4b1j"]
[ext_resource type="PackedScene" uid="uid://bpg0xnifbjsoh" path="res://scenes/crew_pawn.tscn" id="13_nrtoj"]
[ext_resource type="Script" uid="uid://grlnhjocqrnw" path="res://scripts/crew/crew_controller.gd" id="16_o1tcx"]

[node name="World" type="Node2D"]

[node name="Terrain" parent="." instance=ExtResource("1_kqs1s")]

[node name="Buildings" type="Node2D" parent="."]

[node name="Construction" type="Node2D" parent="."]

[node name="BuildMode" type="Node2D" parent="." node_paths=PackedStringArray("terrain_grid")]
script = ExtResource("2_d1c63")
terrain_grid = NodePath("../Terrain/Main_Ground")
building_scene = ExtResource("3_0uv0p")
inside_build_scene = ExtResource("4_b3faq")
construction_site_scene = ExtResource("6_0uv0p")
extractor_scene = ExtResource("2_pdh0q")

[node name="RoomMode" type="Node2D" parent="."]
script = ExtResource("8_rpuxp")

[node name="ResourceNodes" parent="." instance=ExtResource("6_ygioq")]
position = Vector2(-500, 500)

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("3_7g83o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BuildUI" parent="UI" instance=ExtResource("2_32lhk")]

[node name="TopBarUI" parent="UI" instance=ExtResource("8_b3faq")]

[node name="RightPanelUI" parent="UI" instance=ExtResource("11_7c4bj")]
offset_left = -100.0
offset_top = 300.0
offset_bottom = 100.0
script = ExtResource("12_nrtoj")

[node name="CrewHudPanelUI" parent="UI" instance=ExtResource("13_i4b1j")]
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
grow_horizontal = 1
mouse_filter = 2

[node name="CrewPawn" parent="." instance=ExtResource("13_nrtoj")]

[node name="CrewPawn2" parent="." instance=ExtResource("13_nrtoj")]
position = Vector2(30, 30)

[node name="CrewController" type="Node2D" parent="." node_paths=PackedStringArray("hud_panel")]
script = ExtResource("16_o1tcx")
hud_panel = NodePath("../UI/CrewHudPanelUI")

[editable path="Terrain"]
